added "analyze my mood" button

--- a/templates/home.html
+++ b/templates/home.html
@@ -39,6 +39,7 @@
                 <span>This is what we believe your mood is!</span>
                 <div class="primary-button">
                     <a href="#services">Explore our quotes</a>
+                    <a href="{{ url_for('index') }}" style="background-color: #189ad3;">Analyze mood again</a>
                 </div>
             </div>
         </div>
