--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
     <div class="s002">
       <form id="myForm" name="myForm" action = "/home" method = post onsubmit="return validateForm()">
         <fieldset>
-          <legend>HOW YOU DOING?</legend>
+          <legend>ANALYZE MY MOOD</legend>
         </fieldset>
         <div class="inner-form">
           <div class="input-field first-wrap" id="results">
